gcc/testsuite/g++.target/i386/mv8.C
// { dg-do compile }
// { dg-options "" }

__attribute__((target (11,12)))
void foo (void) // { dg-error "not a string" }
{
}
